Update constraint for Xcode5 DP3.

--- a/Example/Onkyo Console/en.lproj/ReceiverSheet.xib
+++ b/Example/Onkyo Console/en.lproj/ReceiverSheet.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="4457.9" systemVersion="12E55" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="4471.1" systemVersion="13A510d" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment defaultVersion="1080" identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="4457.9"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="4471.1"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="ReceiverBrowser">
@@ -25,7 +25,7 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="fDa-mX-KxT">
-                        <rect key="frame" x="17" y="179" width="209" height="17"/>
+                        <rect key="frame" x="17" y="179" width="210" height="17"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                         <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" allowsUndo="NO" sendsActionOnEndEditing="YES" title="Select a reciever to connect to:" id="VjR-L1-axR">
                             <font key="font" metaFont="systemBold"/>
@@ -142,17 +142,4 @@ DQ
             </connections>
         </arrayController>
     </objects>
-    <classes>
-        <class className="NSLayoutConstraint" superclassName="NSObject">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
-        </class>
-        <class className="ReceiverBrowser" superclassName="NSObject">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/ReceiverBrowser.h"/>
-            <relationships>
-                <relationship kind="action" name="acceptSelection:"/>
-                <relationship kind="outlet" name="arrayController" candidateClass="NSArrayController"/>
-                <relationship kind="outlet" name="window" candidateClass="NSWindow"/>
-            </relationships>
-        </class>
-    </classes>
 </document>
